--- a/index.html
+++ b/index.html
@@ -1,5 +1,26 @@
-hello
-<script type="text/javascript">
-	alert("你好");
-
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>backschool-time</title>
+<link rel="stylesheet" href="style.css"  />
+</head>
+<script language="javascript" type="text/javascript">       
+  window.onload = function(){
+　　var timedate= new Date("6,20,2017");       
+　　var now = new Date();    
+　　var date = timedate.getTime() - now.getTime();    //得出的为毫秒
+　　var time = Math.ceil(date/(1000 * 60 * 60 * 24));  
+    //1000 * 60 * 60 * 24一天的秒数
+    if(time > 0 ){
+	  document.getElementById('timeShow').innerHTML = time;
+	}
+    }
 </script>
+</head>
+<body>
+   <div style="width:200px;margin = 0px auto;">
+    <div class="txtshow">backschool-time<span  id="timeShow"></span>天</div>
+   </div>
+</body>
+</html>
