--- a/index.html
+++ b/index.html
@@ -5,22 +5,31 @@
 <title>backschool-time</title>
 <link rel="stylesheet" href="style.css"  />
 </head>
-<script language="javascript" type="text/javascript">       
-  window.onload = function(){
-　　var timedate= new Date("6,20,2017");       
-　　var now = new Date();    
-　　var date = timedate.getTime() - now.getTime();    //得出的为毫秒
-　　var time = Math.ceil(date/(1000 * 60 * 60 * 24));  
-    //1000 * 60 * 60 * 24一天的秒数
-    if(time > 0 ){
-	  document.getElementById('timeShow').innerHTML = time;
-	}
-    }
-</script>
-</head>
+
 <body>
-   <div style="width:200px;margin = 0px auto;">
-    <div class="txtshow">backschool-time<span  id="timeShow"></span>天</div>
-   </div>
+<div>
+<div class="time">还剩 <span id="LeftTime"></span></div>
+</div>
+<script>
+function FreshTime()
+{
+        var endtime=new Date("2014/5/15,12:20:12");//结束时间
+        var nowtime = new Date();//当前时间
+        var lefttime=parseInt((endtime.getTime()-nowtime.getTime())/1000); 
+        d=parseInt(lefttime/3600/24);
+        h=parseInt((lefttime/3600)%24);
+        m=parseInt((lefttime/60)%60);
+        s=parseInt(lefttime%60);
+       
+        document.getElementById("LeftTime").innerHTML=d+"天"+h+"小时"+m+"分"+s+"秒";
+        if(lefttime<=0){
+        document.getElementById("LeftTime").innerHTML="返校时间到";
+        clearInterval(sh);
+        }
+}
+FreshTime()
+var sh;
+sh=setInterval(FreshTime,1000);
+</script>
 </body>
 </html>
